diesel_compile_tests/tests/fail/combinations_require_same_sql_types.stderr
error[E0271]: type mismatch resolving `<table as AsQuery>::SqlType == (Integer, Text)`
  --> tests/fail/combinations_require_same_sql_types.rs:30:32
   |
LL |     let _ = users::table.union(comments::table);
   |                          ----- ^^^^^^^^^^^^^^^ type mismatch resolving `<table as AsQuery>::SqlType == (Integer, Text)`
   |                          |
   |                          required by a bound introduced by this call
   |
note: expected this to be `(diesel::sql_types::Integer, diesel::sql_types::Text)`
  --> tests/fail/combinations_require_same_sql_types.rs:19:1
   |
LL | / table! {
LL | |     comments {
LL | |         id -> Integer,
LL | |         post_id -> Integer,
LL | |     }
LL | | }
   | |_^
   = note: expected tuple `(diesel::sql_types::Integer, diesel::sql_types::Text)`
              found tuple `(diesel::sql_types::Integer, diesel::sql_types::Integer)`
note: required by a bound in `union`
  --> DIESEL/diesel/diesel/src/query_dsl/combine_dsl.rs
   |
LL |     fn union<Rhs>(self, rhs: Rhs) -> dsl::Union<Self, Rhs>
   |        ----- required by a bound in this associated function
LL |     where
LL |         Rhs: AsQuery<SqlType = <Self::Query as Query>::SqlType>;
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CombineDsl::union`
   = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<table as AsQuery>::SqlType == (Integer, Text)`
  --> tests/fail/combinations_require_same_sql_types.rs:36:25
   |
LL |     let _ = union.union(comments::table);
   |                   ----- ^^^^^^^^^^^^^^^ type mismatch resolving `<table as AsQuery>::SqlType == (Integer, Text)`
   |                   |
   |                   required by a bound introduced by this call
   |
note: expected this to be `(diesel::sql_types::Integer, diesel::sql_types::Text)`
  --> tests/fail/combinations_require_same_sql_types.rs:19:1
   |
LL | / table! {
LL | |     comments {
LL | |         id -> Integer,
LL | |         post_id -> Integer,
LL | |     }
LL | | }
   | |_^
   = note: expected tuple `(diesel::sql_types::Integer, diesel::sql_types::Text)`
              found tuple `(diesel::sql_types::Integer, diesel::sql_types::Integer)`
note: required by a bound in `union`
  --> DIESEL/diesel/diesel/src/query_dsl/combine_dsl.rs
   |
LL |     fn union<Rhs>(self, rhs: Rhs) -> dsl::Union<Self, Rhs>
   |        ----- required by a bound in this associated function
LL |     where
LL |         Rhs: AsQuery<SqlType = <Self::Query as Query>::SqlType>;
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CombineDsl::union`
   = note: this error originates in the macro `table` (in Nightly builds, run with -Z macro-backtrace for more info)
For more information about this error, try `rustc --explain E0271`.
